# c-examples

./: .gitignore  CMakeLists.txt  README.md
src/: main.c  say_hello.c  say_hello.h
test/: test_say_hello.c
